--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="card">
-    <div class="img-container">
+  <main class="card">
+    <section class="img-container">
       <img src="./qr-code-component/qr-code-component-main/images/image-qr-code.png" alt="gr code" />
-    </div>
-    <div class="text-container">
-      <div class="title text-preset-1">Improve your front-end skills by building projects</div>
-      <div class="content text-preset-2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>
-    </div>
-  </div>
+    </section>
+    <section class="text-container">
+      <h1 class="title text-preset-1">Improve your front-end skills by building projects</h1>
+      <h2 class="content text-preset-2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
+    </section>
+  </main>
 </body>
 </html>
