--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main class="card">
     <section class="img-container">
-      <img src="./qr-code-component/qr-code-component-main/images/image-qr-code.png" alt="gr code" />
+      <img src="./qr-code-component/qr-code-component-main/images/image-qr-code.png" alt="qr code" />
     </section>
     <section class="text-container">
       <h1 class="title text-preset-1">Improve your front-end skills by building projects</h1>
